--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,8 +50,8 @@
       >
       </li>
       <li class="nav-item" *ngIf="account.role === Role.Admin">
-      <a routerLink="/" routerLinkActive="active" class="nav-link text-white"
-        >Strands</a
+      <a routerLink="/homeroom" routerLinkActive="active" class="nav-link text-white"
+        >Homerooms</a
       >
       </li>
       <li class="nav-item" *ngIf="account.role === Role.Student">
