--- a/src/app/student/egrade.component.html
+++ b/src/app/student/egrade.component.html
@@ -45,8 +45,11 @@
         <td>
           {{ a.teacher ? a.teacher.lastName + " " + a.teacher.firstName : "" }}
         </td>
+        <!-- first quarter grade -->
         <td></td>
+        <!-- second quarter gradee -->
         <td></td>
+        <!-- average of two quarter grades -->
         <td></td>
       </tr>
     </tbody>
