--- a/src/app/teacher/ECR/assessment-type.component.html
+++ b/src/app/teacher/ECR/assessment-type.component.html
@@ -116,7 +116,7 @@
           }"
           formControlName="description"
           rows="2"
-          placeholder="description is optional :)"
+          placeholder="description is optional "
         ></textarea>
         <div
           *ngIf="submitted && f.description.errors?.maxlength"
