--- a/src/app/teacher/ECR/quarterly-grade-sheet.component.html
+++ b/src/app/teacher/ECR/quarterly-grade-sheet.component.html
@@ -2,7 +2,12 @@
   <button class="btn btn-sml btn-primary" (click)="printGradeSheet()">
     Print Grades
   </button>
-  <button class="btn btn-sml btn-warning ml-3" (click)="openLockModal()">Lock Grades</button>
+  <button 
+    class="btn btn-sml btn-warning ml-3" 
+    (click)="openLockModal()" 
+    [disabled]="allLocked">
+    {{ allLocked ? 'Locked' : 'Lock Grades' }}
+  </button>
 </div>
 
 <div
