--- a/src/app/homeroom/consolidated-sheet/semestral-consolidated.component.html
+++ b/src/app/homeroom/consolidated-sheet/semestral-consolidated.component.html
@@ -1,5 +1,4 @@
-<!-- <div class="table-responsive-lg"> -->
-  <table class="table table-hover table-sm text-center" *ngIf="sheet">
+<table class="table table-hover table-sm text-center" *ngIf="sheet">
   <thead>
     <tr>
       <th rowspan="2">Students</th>
@@ -9,30 +8,29 @@
     </tr>
     <tr>
       <ng-container *ngFor="let subj of sheet.subjects">
-        <th>1st</th>
-        <th>2nd</th>
-        <th>Ave</th>
+        <th>1ST</th>
+        <th>2ND</th>
+        <th>SFG</th>
       </ng-container>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let student of sheet.students">
-      <td>{{ student.account.lastname }}, {{ student.account.firstname }}</td>
-      <ng-container *ngFor="let subj of sheet.subjects">
-        <!-- placeholder grades, you can replace with real quiz/score data -->
-         <!-- first quarter grade per student per subject -->
-        <td>-</td>
-        <!-- second quarter grade per student per subject -->
-        <td>-</td>
-        <!-- ave of 2 quarter grade per student per subject -->
-        <td>-</td>
-      </ng-container>
-    </tr>
-  </tbody>
+  <tr *ngFor="let student of sheet.students">
+    <td>{{ student.name }}</td>
+    <ng-container *ngFor="let subj of sheet.subjects">
+      <td>{{ student.grades[subj.subject.id]?.first ?? ' ' }}</td>
+      <td>{{ student.grades[subj.subject.id]?.second ?? ' ' }}</td>
+      <td>{{ student.grades[subj.subject.id]?.ave ?? ' ' }}</td>
+    </ng-container>
+  </tr>
+</tbody>
+
 </table>
 
-<!-- </div> -->
-
-<div *ngIf="loading" class="d-flex justify-content-center align-items-center my-5" style="min-height: 150px;">
+<div
+  *ngIf="loading"
+  class="d-flex justify-content-center align-items-center my-5"
+  style="min-height: 150px"
+>
   <div class="spinner-border text-primary" role="status"></div>
 </div>
