--- a/src/app/homeroom/homeroom-list.component.html
+++ b/src/app/homeroom/homeroom-list.component.html
@@ -1,12 +1,13 @@
-<h1>Homerooms</h1>
+<h1>Homeroom Management</h1>
 
-<table class="table table-hover table-sm">
+<table class="table table-hover table-sm text-center">
   <thead>
     <tr>
-      <th style="width: 5%;">ID</th>
+      <th style="width: 5%;">#</th>
       <th style="width: 10%;">Grade Level</th>
       <th style="width: 15%;">Section</th>
       <th style="width: 20%;">Strand</th>
+      <th style="width: 10%;">School Year</th>
       <th style="width: 20%;">Actions</th>
     </tr>
   </thead>
@@ -17,6 +18,7 @@
       <td>{{ h.grade_level }}</td>
       <td>{{ h.section }}</td>
       <td>{{ h.strand}}</td>
+      <td>{{ h.school_year }}</td>
       <td>
         <a [routerLink]="['./', h.id, 'FIRST SEMESTER']" routerLinkActive="active"  class="btn btn-sm btn-primary">Consolidated Sheet</a>
         <a [routerLink]="['./locking-history', h.id]" routerLinkActive="active"  class="btn btn-sm btn-success ml-3">Locking History</a>
