--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,6 +63,16 @@
       </li>
 
       <li class="nav-item" *ngIf="account.role === Role.Teacher">
+        <a
+          routerLink=""
+          routerLinkActive="active"
+          class="nav-link text-white"
+        >
+          <i class="bi bi-journal-text me-2"></i> Assigned Homeroom
+        </a>
+      </li>
+
+      <li class="nav-item" *ngIf="account.role === Role.Teacher">
         <a routerLink="/" routerLinkActive="active" class="nav-link text-white">
           <i class="bi bi-people-fill me-2"></i> Section
         </a>
@@ -83,7 +93,7 @@
         </a>
       </li>   
 
-      <li class="nav-item" *ngIf="account.role === Role.Principal">
+      <li class="nav-item" *ngIf="account.role === Role.Registrar">
         <a
           routerLink="/curriculum-subjects"
           routerLinkActive="active"
@@ -93,7 +103,7 @@
         </a>
       </li>
 
-      <li class="nav-item" *ngIf="account.role === Role.Principal">
+      <li class="nav-item" *ngIf="account.role === Role.Registrar">
         <a routerLink="/" routerLinkActive="active" class="nav-link text-white">
           <i class="bi bi-calendar-check me-2"></i> School Year Management
         </a>
