--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,27 +62,10 @@
         </a>
       </li>
 
-      <li class="nav-item" *ngIf="account.role === Role.Teacher">
-        <a
-          routerLink=""
-          routerLinkActive="active"
-          class="nav-link text-white"
-        >
-          <i class="bi bi-journal-text me-2"></i> Assigned Homeroom
-        </a>
-      </li>
-
-      <li class="nav-item" *ngIf="account.role === Role.Teacher">
-        <a routerLink="/" routerLinkActive="active" class="nav-link text-white">
-          <i class="bi bi-people-fill me-2"></i> Section
-        </a>
-      </li>
-
       <li
         class="nav-item"
         *ngIf="
-          account.role === Role.Principal || account.role === Role.Registrar
-        "
+          account.role === Role.Principal || account.role === Role.Registrar || account.role === Role.Teacher"
       >
         <a
           routerLink="/homeroom"  
