--- a/src/app/student/egrade.component.html
+++ b/src/app/student/egrade.component.html
@@ -5,8 +5,8 @@
     <label for="schoolTerm">School Term</label>
     <select id="schoolTerm" class="form-control" [(ngModel)]="selectedSemester">
       <option value="">-- Select School Term --</option>
-      <option value="FIRST SEMESTER">1st Semester S.Y. 2025 - 2026</option>
-      <option value="SECOND SEMESTER">2nd Semester S.Y. 2025 - 2026</option>
+      <option value="FIRST SEMESTER">1st Semester S.Y. {{ schoolYear }}</option>
+      <option value="SECOND SEMESTER">2nd Semester S.Y. {{ schoolYear }}</option>
     </select>
   </div>
 
@@ -18,15 +18,15 @@
         <th style="width: 20%">Teacher</th>
         <th style="width: 10%">1ST</th>
         <th style="width: 10%">2ND</th>
-        <th style="width: 10%">SFG</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- If no semester selected -->
+        <th style="width: 10%">SFG</th> 
+      </tr>   
+    </thead>      
+    <tbody>     
+      <!-- If no semester selected -->  
       <tr *ngIf="!selectedSemester">
         <td colspan="6" class="text-center py-6">
-          <h1 class="text-xl font-bold">Select semester</h1>
-        </td>
+          <h1 class="text-xl font-bold">Select semester</h1>  
+        </td>     
       </tr>
 
       <!-- If SECOND SEMESTER selected but no 2nd sem subjects -->
